--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
     <h2>Others</h2>
     <ul>
         <li><a href="www.pinterest.com">My Hobbies</a></li>
-        <li><a href="www.instagram.com/_emmanuel91_">Contact Me</a></li>
+        <li><a href="https://instagram.com/_emmanuel91_?igshid=OGQ5ZDc2ODk2ZA==">Contact Me</a></li>
     </ul>
 
     <footer>
-        <p>>© jxmmy Doe. All rights reserved.</p>
+        <p>© jxmmy Doe. All rights reserved.</p>
     </footer>
      
 </body>
